# shopping-navigator

./: .gitignore  LICENSE  README.md
AndroidIns/: AndroidManifest.xml
AndroidIns/assets/: config-sage.xml
AndroidIns/jni/: Android.mk  AndroidIns.cpp  Application.mk  nrec_basil_androidins_Ins.h
AndroidIns/res/layout/: activity_main.xml
AndroidIns/res/values/: strings.xml
AndroidIns/src/nrec/basil/androidins/: Ins.java  MainActivity.java
ShoppingNavigator/: CMakeLists.txt
ShoppingNavigator/binary/: ShoppingNavigator  config-pdr.xml  config.xml
ShoppingNavigator/source/image/: CameraCapture.cpp  CameraCapture.h  ImageMap.cpp  ImageMap.h  ImageServer.cpp  MapLoader.cpp  MapLoader.h  UdpServer.cpp  UdpServer.h
ShoppingNavigator/source/inertial/: InertialTracker.cpp  cinertialfilter.h  cpdr.cpp  cpdr.h  cpdrerrormodel.h  cstepdetector.h  cxsensusbport.cpp  cxsensusbport.h
wImuConsole/: AndroidManifest.xml
wImuConsole/res/layout/: activity_camera.xml  activity_map.xml  activity_sensor_settings.xml
wImuConsole/res/menu/: camera.xml  map.xml  sensor_settings.xml
wImuConsole/res/values/: dimens.xml  strings.xml
wImuConsole/src/nrec/basil/wimuconsole/: BluetoothService.java  CameraActivity.java  MapActivity.java  SensorSettingsActivity.java
